@@ -1,3 +1,13 @@
+2012-10-25  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Improper out-of-order call on a rule that is being removed from the stylesheet.
+        https://bugs.webkit.org/show_bug.cgi?id=100357
+
+        Reviewed by Vsevolod Vlasov.
+
+        * inspector/InspectorStyleSheet.cpp:
+        (WebCore::InspectorStyleSheet::deleteRule):
+
 2012-10-25  Adam Barth  <abarth@webkit.org>
 
         [V8] DOMDataStoreHandle serves no purpose and can be removed
